# properties

./: CMakeLists.txt  README.md
include/sycl/khr/: properties.hpp  queue_properties.hpp
include/sycl/khr/detail/: property_bases.hpp  property_meta.hpp
include/sycl/khr2/: properties.hpp  queue_properties.hpp
include/sycl/khr2/detail/: property_bases.hpp  property_meta.hpp
include/sycl/khr3/: properties.hpp  queue_properties.hpp
include/sycl/khr3/detail/: property_bases.hpp  property_meta.hpp
include/sycl/khr4/: properties.hpp  queue_properties.hpp
include/sycl/khr4/detail/: property_bases.hpp  property_meta.hpp
include/sycl/khr5/: properties.hpp  queue_properties.hpp
include/sycl/khr5/detail/: property_bases.hpp  property_meta.hpp
include/sycl/khr6/: properties.hpp  queue_properties.hpp
include/sycl/khr6/detail/: property_bases.hpp  property_meta.hpp
test/: test_properties.cpp  test_properties_v2.cpp  test_properties_v3.cpp  test_properties_v4.cpp  test_properties_v5.cpp  test_properties_v6.cpp
